# blog2pelican

./: .gitignore  README.md  TODO.md  blog2pelican.py  pyproject.toml
blog2pelican/: tool.py
blog2pelican/adapters/blog_readers/: __init__.py  blogger.py  dotclear.py  feed.py  medium.py  tumblr.py  wordpress.py
blog2pelican/app/use_cases/: convert_blog.py  convert_post.py
blog2pelican/application/use_cases/: convert_blog.py  convert_post.py
blog2pelican/blogs/: converters.py
blog2pelican/cli/: main.py
blog2pelican/domain/adapters/blog_readers/: __init__.py  blogger.py  dotclear.py  feed.py  medium.py  tumblr.py  wordpress.py
blog2pelican/domain/entities/: blogs.py  posts.py
blog2pelican/domain/entities/settings/: __init__.py  base.py  blogger.py  dotclear.py  feed.py  medium.py  tumblr.py  wordpress.py
blog2pelican/domain/ports/: blog_reader.py
blog2pelican/domain/use_cases/: blog_converters.py  convert_blog.py
blog2pelican/entities/: posts.py
blog2pelican/entities/import_settings/: __init__.py  base.py  blogger.py  dotclear.py  feed.py  medium.py  tumblr.py  wordpress.py
blog2pelican/entities/settings/: medium.py  tumblr.py
blog2pelican/helpers/: pandoc.py  pelican_format.py  soup.py
blog2pelican/parsers/: __init__.py  base.py  blogger.py  dotclear.py  feed.py  medium.py  tumblr.py  wordpress.py
blog2pelican/posts/: converters.py
tests/: test_dotclear.py
tests/app/use_cases/: test_dotclear_to_pelican.py
tests/blog_readers/: test_dotclear_reader.py
tests/data/dotclear/headers/: categories.txt  (+10 more)
tests/parsers/: test_dotclear_parser.py
(+11 files in other folders)
