[project]
name = "blog2pelican"
version = "0.1.0"
description = "Environment to call pelican-import"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "feedparser>=6.0.12",
    "lxml>=6.0.2",
    "pelican>=4.11.0.post0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pytest>=9.0.0",
    "types-docutils>=0.22.2.20251006",
    "types-python-dateutil>=2.9.0.20251108",
]

[tool.mypy]
follow_untyped_imports = true
